<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_camera_permission">Camera</string>
    <string name="access_external_Storage_permission">Storage</string>
    <string name="access_sd_fail">Unable to access SD card.</string>
    <string name="accessibility_shutter_button">Shutter button</string>
    <string name="ae_locked">AE locked</string>
    <string name="ai_back">Back </string>
    <string name="ai_enter">Please enter %s mode</string>
    <string name="ai_moon_title">Moon</string>
    <string name="ai_title">AICamera</string>
    <string name="analysis_cube_fail">Image Analysis Failed</string>
    <string name="and">" and "</string>
    <string name="app_name">Camera</string>
    <string name="auto">@string/common_auto</string>
    <string name="bigaperture_tip">Please keep two meters away from the subject</string>
    <string name="bigaperture_tip_1">Please keep one meters away from the subject</string>
    <string name="bottom_cancel">@null</string>
    <string name="bottom_go_on">@null</string>
    <string name="bottom_sure">@null</string>
    <string name="calibration_serviceOn">Calibration service is on</string>
    <string name="camera_family">CAMERA-FAMILY</string>
    <string name="camera_permission">"Welcome to use Camera. In order to provide you with better services, the following permissions are required during use:
 1. Network: Network positioning requires networking services. Please consult your local operator for specific traffic charges.
 2. Get your location information, including approximate location and precise location.
 3. Recording permission, which needs to be obtained for recording.
 4. Camera permission, which is required for taking photos and videos.
 5. Storage permission, which is required to read and save pictures and video files."</string>
    <string name="camera_permission_allow">Agree</string>
    <string name="camera_permission_forbid">Exit</string>
    <string name="camera_privacy_alert">" Clicking \"Agree\" means that you agree to the above content and "<a href="https://account.nubia.com/res/html/camera_privacy.html">Camera privacy policy</a>.</string>
    <string name="camera_privacy_alert_no_link">Clicking \"Agree\" means that you agree to the above content.</string>
    <string name="camera_select_normal">PHOTO</string>
    <string name="camera_unavailable_hal_error">Unable to connect to the camera. Please try again or reboot the phone.</string>
    <string name="cancel">Cancel</string>
    <string name="capture_camera_back">Back Camera</string>
    <string name="capture_camera_close">Off</string>
    <string name="capture_camera_notification_title">Speed capture is turned on</string>
    <string name="circle_data">M31,58 L31,58 C16.1,58 4,45.9 4,31 L4,31 C4,16 16.1,4 31,4 L31,4 C45.9,4 58,16 58,31 L58,31 C58,45.9 45.9,58 31,58 Z</string>
    <string name="circle_data_press">M31,52.6 L31,52.6 C19.0707,52.6 9.4,42.9294 9.4,31 L9.4,31 C9.4,19.0707 19.0707,9.4 31,9.4 L31,9.4 C42.9294,9.4 52.6,19.0707 52.6,31 L52.6,31 C52.6,42.9294 42.9294,52.6 31,52.6 Z</string>
    <string name="clone_clean">Eraser</string>
    <string name="clone_delay_shoot_tip">The first countdown plus %d seconds.</string>
    <string name="clone_dialog_msg">Whether to give up this photo?</string>
    <string name="clone_draw">Paint</string>
    <string name="clone_edit">@null</string>
    <string name="clone_look">@null</string>
    <string name="clone_specification_introduction_content">Clone is a kind of funny shooting mode. Clone the moving persons and objects on the same scene through continuous shooting to create innovative images.</string>
    <string name="clone_specification_introduction_tip">@string/specification_introduction_tip</string>
    <string name="clone_specification_need">Shoot the same scene, (hand-held) hold your phone steady</string>
    <string name="clone_specification_photo1">Clone multiple identical people under the same scene</string>
    <string name="clone_specification_photo2">Suspended Photography</string>
    <string name="nubia_cancel_button_bg">@drawable/nubia_cancel_button_bg</string>
    <string name="nubia_change_button_bg">@drawable/nubia_change_button_bg</string>
    <string name="nubia_sure_button_bg">@drawable/nubia_sure_button_bg</string>
    <string name="specification_pro_focus_title">1. Focus</string>
    <string name="specification_pro_focus_title1">1.1 Auto Focus</string>
    <string name="specification_pro_focus_title1_context">Auto Focus is set as default when the camera is started. Auto Focus can quickly and accurately determine the position of the object and make the image clear.</string>
    <string name="specification_pro_focus_title2">1.2 Focus Lock</string>
    <string name="specification_pro_focus_title2_context">Purpose: make sure the focus point of the object is consistent during continuous shooting</string>
    <string name="specification_pro_focus_title2_context1">Focus frame</string>
    <string name="specification_pro_focus_title2_context2">Lock the focus point</string>
    <string name="specification_pro_focus_title2_context3">Long press</string>
    <string name="specification_pro_focus_title2_context4">Commonly used scenes</string>
    <string name="specification_pro_focus_title2_context5">"Macro Photography
High-speed continuous shooting 
Self-timer continuous shooting"</string>
    <string name="specification_pro_focus_title3">1.3 Manual Focus</string>
    <string name="specification_pro_focus_title3_context">Purpose: manually adjust the focus value to make the image of a object from a specific distance clear.</string>
    <string name="specification_pro_focus_title3_context1">1.3.1 DOF Preview</string>
    <string name="specification_pro_focus_title3_context2">During the process of manual focus, the most concentrated area of red peak values in the following figure are clear focus points. It can help photographers to achieve more accurate focus.</string>
    <string name="specification_pro_focus_title3_context3">Photo examples</string>
    <string name="specification_pro_focus_title3_context4">When shooting, observe the red peak value to determine the focus point on the image.</string>
    <string name="specification_pro_focus_title3_context5">The following shows the image taken. (enlarged partially)</string>
    <string name="specification_pro_focus_title3_context6">Commonly used scenes</string>
    <string name="specification_pro_focus_title3_context7">"Macro Photography
Transparent glass windows
Dark light, Night scene, Starry sky, etc."</string>
    <string name="specification_pro_focus_title_context">Make the image clear through detecting the position of the object.</string>
    <string name="specification_pro_iso_title">5. ISO</string>
    <string name="specification_pro_iso_title_context">What ISO denotes is how sensitive the image sensor is to the amount of light present. The higher the ISO is, the more light the camera sensor absorbs.</string>
    <string name="specification_pro_iso_title_context1">Note</string>
    <string name="specification_pro_iso_title_context2">See the following photo examples. The higher ISO you select, the more noise it will generate. Selecting lower ISO can guarantee better image quality, but you need reduce the shutter speed (increase shooting time) to get reasonable exposure.</string>
    <string name="specification_pro_iso_title_context3">Photo examples</string>
    <string name="specification_pro_iso_title_context4_1">High ISO：3200</string>
    <string name="specification_pro_iso_title_context4_2">Shutter speed：1/500s</string>
    <string name="specification_pro_iso_title_context5_1">Low ISO：100</string>
    <string name="specification_pro_iso_title_context5_2">Shutter speed：1/30s</string>
    <string name="specification_pro_shutter_title">4. Shutter Speed</string>
    <string name="specification_pro_shutter_title_context">Shutter speed is the length of time when the image sensor inside the camera is exposed to light, e.g., 1/2000s, 1/500s, 1s, 2s, etc.</string>
    <string name="specification_pro_shutter_title_context1">Note</string>
    <string name="specification_pro_shutter_title_context2">Fast shutter speeds can be used to shoot fast moving objects or high-luminance scenes; while slow shutter speeds can be used to shoot the scenes without enough light; During the shooting process, shutter speed should be flexibly adjusted with ISO to avoid image underexposure or overexposure.</string>
    <string name="specification_pro_shutter_title_context3">Photo examples</string>
    <string name="specification_pro_shutter_title_context4">The variation of exposure time indicates different states of the shooting object.1/500s exposure time, freeze the moving cars and persons.</string>
    <string name="specification_pro_shutter_title_context5">2s exposure time, record the track of moving vehicle lights.</string>
    <string name="specification_pro_tripod_title">6. How to use the tripod</string>
    <string name="specification_pro_tripod_title_context">When the exposure time is larger than 1/15s, a slight jitter of your hands will cause image blurring. Therefore you need use a tripod or other stabilization method to shoot.</string>
    <string name="specification_pro_tripod_title_context1">Common shooting modes</string>
    <string name="specification_pro_tripod_title_context2">Electronic Aperture, Light Painting, Star Trail, Self-timer Continuous Shooting, etc.</string>
    <string name="specification_pro_tripod_title_context3">Anti-jitter Tips</string>
    <string name="specification_pro_tripod_title_context4">Check the stability of your device before shooting and use a countdown timer during the photographing process.</string>
    <string name="specification_pro_tripod_title_context5">Tripod Operation Diagram</string>
    <string name="specification_pro_tripod_title_context6">Tripod Application Range</string>
    <string name="trajectory_change">@null</string>
</resources>