<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:RotateTextImageView="http://schemas.android.com/apk/res-auto">
    <com.android.common.ui.RotateTextImageView android:gravity="center" android:id="@id/done_button" android:background="@drawable/nubia_small_button" android:focusable="false" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@string/nubia_sure_button_bg" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/dimens_18" android:layout_alignParentEnd="true" RotateTextImageView:rotatTextColor="@color/highlight_color" RotateTextImageView:rotatTextSize="@dimen/dimens_14" RotateTextImageView:text="@string/bottom_sure" />
    <com.android.common.ui.RotateTextImageView android:gravity="center" android:id="@id/btn_cancel" android:background="@drawable/nubia_small_button" android:focusable="false" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@string/nubia_cancel_button_bg" android:layout_centerVertical="true" android:layout_marginStart="@dimen/dimens_18" android:layout_alignParentStart="true" RotateTextImageView:rotatTextColor="@color/highlight_color" RotateTextImageView:rotatTextSize="@dimen/dimens_14" RotateTextImageView:text="@string/bottom_cancel" />
    <com.android.common.ui.RotateTextImageView android:gravity="center" android:id="@id/btn_change" android:background="@drawable/nubia_big_button" android:focusable="false" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@string/nubia_change_button_bg" android:layout_centerInParent="true" RotateTextImageView:rotatTextColor="@color/highlight_color" RotateTextImageView:rotatTextSize="@dimen/dimens_14" RotateTextImageView:text="@string/trajectory_change" />
</merge>